--- a/mobileweb/soneme/www/templates/djs.html
+++ b/mobileweb/soneme/www/templates/djs.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="list">
-      <a class="item item-thumbnail-left" ng-repeat="dj in djs" href="#/app/playlists/{{playlist.id}}">
+      <a class="item item-thumbnail-left" ng-repeat="dj in djs" href="#/app/dj/{{dj.id}}">
           <img ng-src="{{dj.img}}">
           <h2>{{dj.title}}</h2>
           <p>Subtitle</p>
