--- a/mobileweb/soneme/www/templates/home.html
+++ b/mobileweb/soneme/www/templates/home.html
@@ -3,20 +3,14 @@
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-      <div class="row">
-          <div class="col"><grid-cover info="gridSongs[0]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[1]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[2]"></grid-cover></div>
-      </div>
-      <div class="row">
-          <div class="col"><grid-cover info="gridSongs[3]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[4]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[5]"></grid-cover></div>
-      </div>
-      <div class="row">
-          <div class="col"><grid-cover info="gridSongs[6]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[7]"></grid-cover></div>
-          <div class="col"><grid-cover info="gridSongs[8]"></grid-cover></div>
+      <div class="gridContainer">
+          <div class="coverContainer" ng-repeat="gridSong in gridSongs">
+              <div class="gridcell" data-drag="true" data-jqyoui-options="{revert: 'invalid'}"
+                   ng-model="gridSongs" jqyoui-draggable="{index: {{$index}},placeholder:'keep',animate:true, onStart:'dragStartCallback()', onStop:'dragStopCallback()'}">
+                  <img ng-src="{{gridSong.coverUrl}}" width="100" height="100">
+                  <p>{{gridSong.name}}</p>
+              </div>
+          </div>
       </div>
   </ion-content>
   <player info="queueSongs"></player>
