--- a/mobileweb/soneme/www/css/style.css
+++ b/mobileweb/soneme/www/css/style.css
@@ -14,8 +14,17 @@ ion-content {
 
 }
 
+.artistInfoDropZone{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.dropZone {
+    border: 3px solid red !important;
+}
+
 .gridContainer {
-    padding-top: 20px;
     background-image: url(background-transparent.png);
     background-size: cover;
 }
@@ -24,11 +33,25 @@ ion-content {
     display: inline-block;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .gridcell {
+    border: 1px solid #B2CAE4;
+    background-color: white;
     text-align: center;
     z-index: 20;
+    padding: 2px;
+}
+
+.gridcell img {
+    padding: 2px 2px 0px 2px;
+}
+
+.gridcell p {
+    margin: 0 0 4px;
+    line-height: 10px;
+    font-size: 12px;
 }
 
 .bar-footer {
@@ -38,16 +61,11 @@ ion-content {
 .footer {
     position: fixed;
     border: 3px solid #457ab1;
-    border-top: 1px solid black;
     color: white;
     background-color: #457ab1;;
     left: 0;
     right: 0;
     bottom: 0;
-}
-
-.footer.bordered {
-    border: 3px solid red;
 }
 
 .bar.bar-positive {
@@ -77,4 +95,23 @@ ion-content {
 .queueItem {
     display: inline-block;
     margin-left: 4px;
+}
+
+.infoHeader {
+    padding-left: 190px;
+    min-height: 180px;
+}
+
+.infoHeader img{
+    width: 160px;
+    position: absolute;
+    left: 15px;
+}
+
+.infoHeader h2 {
+    margin-top: 20px;
+}
+
+.infoDescription {
+    margin-left: 20px;
 }
