--- a/mobileweb/soneme/www/css/style.css
+++ b/mobileweb/soneme/www/css/style.css
@@ -17,7 +17,7 @@ ion-content {
 .artistInfoDropZone{
     width: 100%;
     height: 40px;
-    margin-bottom: 10px;
+
 }
 
 .dropZone {
@@ -33,7 +33,23 @@ ion-content {
     display: inline-block;
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 3px solid transparent;
+}
+
+.coverContainer.center {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+.coverContainer .gridcell img {
+    width: 100px;
+}
+
+.coverContainer.center .gridcell img {
+    width: 120px;
 }
 
 .gridcell {
@@ -116,4 +132,16 @@ ion-content {
 
 .infoDescription {
     margin-left: 20px;
+}
+
+.infoDescriptionHeader {
+    margin-left: 20px;
+}
+
+.infoWheel{
+    text-align: center;
+}
+
+.wheel {
+    width: 400px;
 }
