--- a/mobileweb/soneme/www/templates/home.html
+++ b/mobileweb/soneme/www/templates/home.html
@@ -2,13 +2,17 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button ng-class="{'button button-icon icon ion-social-rss': liked, 'button button-icon icon ion-social-rss-outline': !liked}" ng-click="liked=!liked"></button>
+  </ion-nav-buttons>
   <ion-content class="has-header">
       <div class="gridContainer">
           <div class="artistInfoDropZone" data-drop="true" data-jqyoui-options ng-model="artistInfo" jqyoui-droppable="{onDrop:'dropInArtistInfoCallback()'}"></div>
-          <div class="coverContainer" ng-repeat="gridSong in gridSongs">
-              <div class="gridcell" data-drag="true" data-jqyoui-options="{revert: 'invalid'}"
-                   ng-model="gridSongs" jqyoui-draggable="{index: {{$index}},placeholder:'keep',animate:true, onStart:'dragStartCallback()', onStop:'dragStopCallback()'}">
-                  <img ng-src="{{gridSong.coverUrl}}" width="100">
+          <div ng-repeat="gridSong in gridSongs" ng-class="{'coverContainer center': gridSong.center, 'coverContainer': !gridSong.center}"
+               data-drop="{{gridSong.center}}" ng-model="songInCenter" jqyoui-droppable="{onDrop:'dropInCenterCallback()'}">
+              <div class="gridcell" data-drag="true" data-jqyoui-options="{revert: 'invalid'}" ng-model="gridSongs"
+                   jqyoui-draggable="{index: {{$index}},placeholder:'keep',animate:true, onStart:'dragStartCallback()', onStop:'dragStopCallback()'}">
+                  <img ng-src="{{gridSong.coverUrl}}">
                   <p>{{gridSong.name}}</p>
               </div>
           </div>
