--- a/mobileweb/soneme/www/templates/search.html
+++ b/mobileweb/soneme/www/templates/search.html
@@ -3,6 +3,17 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Search</h1>
+      <div class="list list-inset">
+          <label class="item item-input">
+              <i class="icon ion-search placeholder-icon"></i>
+              <input ng-model="query" type="text" placeholder="Type in artist, genre or song name to get started">
+          </label>
+      </div>
+      <div class="list">
+          <a nav-clear href="#/app/home" class="item item-icon-left" ng-repeat="match in search | filter: query" >
+            <i ng-class="{'icon ion-disc': match.type, 'icon ion-ios7-heart-outline': match.type == Song}"></i>
+            {{match.keyword}}
+          </a>
+      </div>
   </ion-content>
 </ion-view>
