--- a/mobileweb/soneme/www/templates/artistInfo.html
+++ b/mobileweb/soneme/www/templates/artistInfo.html
@@ -1,10 +1,10 @@
-<ion-view title="Artist Info">
+<ion-view title="Song Info">
   <ion-content class="has-header">
     <div class="infoHeader">
-        <img class="infoCover" ng-src="{{artistInfo[0].coverUrl}}">
-        <h2>{{artistInfo[0].name}}</h2>
+        <img class="infoCover" ng-src="{{artistInfo.coverUrl}}">
+        <h2>{{artistInfo.name}}</h2>
         <hr/>
-        <h3>{{artistInfo[0].artist}}</h3>
+        <h3>{{artistInfo.artist}}</h3>
         <button class="button button-energized">
             Artist Site
         </button>
