--- a/mobileweb/soneme/www/templates/djs.html
+++ b/mobileweb/soneme/www/templates/djs.html
@@ -7,7 +7,7 @@
       <a class="item item-thumbnail-left" ng-repeat="dj in djs" href="#/app/dj/{{dj.id}}">
           <img ng-src="{{dj.img}}">
           <h2>{{dj.title}}</h2>
-          <p>Subtitle</p>
+          <p>{{dj.subtitle}}</p>
       </a>
     </div>
   </ion-content>
