--- a/mobileweb/soneme/www/templates/home.html
+++ b/mobileweb/soneme/www/templates/home.html
@@ -19,5 +19,5 @@
           </div>
       </div>
   </ion-content>
-  <player info="queueSongs" now="nowPlaying"></player>
+  <player info="queueSongs" now="nowPlaying" state="showQueue"></player>
 </ion-view>
